k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: recipes
spec:
  replicas: 5
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 10
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: gorjanbogoevski/recipenest-backend-k8s:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: recipes
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
