k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: recipes
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 10
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gorjanbogoevski/recipenest-frontend-k8s:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
      volumes:
        - name: config-volume
          configMap:
            name: frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: recipes
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
