k8s/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: recipes
spec:
  ports:
    - port: 27017
  clusterIP: None
  selector:
    app: mongo

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: recipes
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 3
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
